# bankshield

./: DEPLOYMENT_GUIDE.md  README.md  run_backend.bat  run_backend.sh  run_frontend.bat  run_frontend.sh  setup.bat  setup.sh  start_linux.sh  start_windows.bat
backend/: app.py  pyproject.toml  requirements.txt  vercel.json
fresh_bankshield/: README.md
fresh_bankshield/backend/: requirements.txt
fresh_bankshield/backend/api/: index.py
fresh_bankshield/frontend/: package.json
fresh_bankshield/frontend/src/: App.js  api.js
fresh_bankshield/frontend/src/components/: AttackBadge.js
fresh_bankshield/frontend/src/pages/: Alerts.js  Login.js  Quarantine.js  Scanner.js
frontend/: netlify.toml  package.json
frontend/public/: index.html
frontend/src/: api.js  index.css
frontend/src/components/: AuthContext.js  Layout.js  Sidebar.js
frontend/src/pages/: Dashboard.js  Logs.js  ModelInfo.js
