[project]
name = "bankshield-ai"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "scikit-learn==1.3.2",
    "numpy==1.24.4",
    "pandas==2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
